:fix: fix list height on smaller screens

--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -5,8 +5,8 @@
   @include m.flexCenter(column, start);
   z-index: 100;
   width: 50rem;
-  gap: 3rem;
-  height: 80%;
+  gap: 2rem;
+  height: 90%;
 
   h1 {
     color: white;
