--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -13,7 +13,7 @@
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    padding: 0.5rem 0rem;
+    padding: 0.3rem 0rem;
     border-radius: 0.5rem;
     border: none;
     outline: none;
