--- a/src/components/Task/Task.scss
+++ b/src/components/Task/Task.scss
@@ -38,5 +38,20 @@
 }
 
 .checked_text{
+  
+  color: v.$FontDark;
   text-decoration: line-through;
+}
+
+
+.high{
+  color: rgb(141, 73, 73)
+}
+
+.medium{
+  color: rgb(125, 115, 73)
+}
+
+.low{
+  color: rgb(38, 125, 73)
 }
